Fix Moon Clipping .hello

--- a/Resume Website/styles.css
+++ b/Resume Website/styles.css
@@ -2,10 +2,6 @@
 
 
 
-/* $phone: 428px;
-$tablet: 1024px; */
-
-
 body {
     height: 100vh;
     margin: 0;
@@ -49,7 +45,7 @@ p {
     height: 10vw;
     gap: 1vw;
     padding-bottom: 1vmin;
-    padding-top: 10vmin;
+    padding-top: 5vw;
 }
 
 header {
@@ -276,7 +272,7 @@ header {
 
 
 .contact {
-    font-size: 1.5vw;
+    font-size: 2vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -291,34 +287,3 @@ header {
     font-size: 2vw;
     font-weight: bold;
 }
-
-
-
-/* 
-.contact-grid {
-    display: grid;
-    color: white;
-    justify-content: center;
-    align-items: center;
-}
-
-.contact-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
-
-
-/* 
-footer {
-    display: flex;
-    color: white;
-    background-color: #8e96af41;
-    padding: 1vw;
-    justify-content: center;
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
-    margin: 0;
-
-
-} */
